use-cases/observability/base/vector.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: vector
  namespace: observability
spec:
  selector:
    matchLabels:
      app: vector
  template:
    metadata:
      labels:
        app: vector
    spec:
      serviceAccountName: vector
      containers:
        - name: vector
          image: timberio/vector:0.54.0-debian
          args: ["--config", "/etc/vector/vector.yaml"]
          volumeMounts:
            - name: config
              mountPath: /etc/vector
            - name: data
              mountPath: /vector-data-dir
            - name: var-log
              mountPath: /var/log
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: vector-config
        - name: data
          emptyDir: {}
        - name: var-log
          hostPath:
            path: /var/log
